force-app/main/default/objects/Certification_Held__c/fields/Cert_Held_Dup_Key__c.field-meta.xml
<CustomField>
    <fullName>Cert_Held_Dup_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This could be called by process builder to add the Certication number , candiate and some serial number to indentify the current batch or certication .</description>
    <label>Cert Held Dup Key</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>