force-app/main/default/objects/Certification_Held__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>Certification being achieved.... After I must know on which certicaton I am being certified held. 
security or netowrk ext</description>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Certifications Held</relationshipLabel>
    <relationshipName>Certifications_Held</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>