force-app/main/default/objects/Certification_Held__c/fields/Certified_Professional__c.field-meta.xml
<CustomField>
    <fullName>Certified_Professional__c</fullName>
    <description>If they passed their certication then they must be certied. , Which can be filter by record, like just technicains  or standards, or from certain company. 
Certified Professional: Contact Record TypeEQUALSTechnician</description>
    <label>Certified Professional</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Certifications Held</relationshipLabel>
    <relationshipName>Certifications_Held</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>