force-app/main/default/objects/Certification_Held__c/fields/Date_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Date_Achieved__c</fullName>
    <description>Date certification was achieved. 
again this can be automate wtih process builder if checkox of after pickulikst complete/pass.</description>
    <label>Date Achieved</label>
    <type>Date</type>
</CustomField>